# flask-chat-app

./: .env  app.py  config.py  pyproject.toml  requirements.txt
migrations/versions/: 22b7db17c0a1_added_message_model.py  53d260a0444b_initial_migration.py  8f2ec3be7f63_initial_migration.py
models/: __init__.py  message.py  user.py
routes/: __init__.py  auth.py  chat.py
static/css/: styles.css
static/js/: chat.js
templates/: index.html
