[project]
name = "flask-chat-app"
version = "0.1.0"
description = ""
authors = [
    {name = "kishan",email = "kishanvaghasiya3789@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio (==4.9.0)",
    "bidict (==0.23.1)",
    "blinker (==1.9.0)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "itsdangerous (==2.2.0)",
    "pbs-installer (==2025.3.11)",
    "python-engineio (==4.11.2)",
    "python-socketio (==5.12.1)",
    "requests (==2.32.3)",
    "simple-websocket (==1.1.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.39)",
    "tomlkit (==0.13.2)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "wsproto (==1.2.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
